--- a/SummerSchool/Base.lproj/Main.storyboard
+++ b/SummerSchool/Base.lproj/Main.storyboard
@@ -274,22 +274,35 @@
                         <subviews>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="4ZH-Ql-PeE" customClass="RGSControlBarView" customModule="SummerSchool" customModuleProvider="target">
                                 <rect key="frame" x="0.0" y="20" width="375" height="45"/>
-                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="45" id="7Nt-h4-dUI"/>
                                 </constraints>
                             </view>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="chZ-hI-ZQd">
+                                <rect key="frame" x="0.0" y="65" width="375" height="553"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <connections>
+                                    <outlet property="dataSource" destination="T6J-SD-IM6" id="Evh-yN-D9k"/>
+                                    <outlet property="delegate" destination="T6J-SD-IM6" id="MZd-Mo-LL2"/>
+                                </connections>
+                            </tableView>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
+                            <constraint firstAttribute="trailing" secondItem="chZ-hI-ZQd" secondAttribute="trailing" id="94x-HK-d5I"/>
                             <constraint firstAttribute="trailing" secondItem="4ZH-Ql-PeE" secondAttribute="trailing" id="EWA-Ag-Lig"/>
                             <constraint firstItem="4ZH-Ql-PeE" firstAttribute="top" secondItem="d4c-8o-rs4" secondAttribute="bottom" id="aKg-5y-mnG"/>
+                            <constraint firstItem="XQL-Gf-vtb" firstAttribute="top" secondItem="chZ-hI-ZQd" secondAttribute="bottom" id="gmw-fh-IeK"/>
+                            <constraint firstItem="chZ-hI-ZQd" firstAttribute="leading" secondItem="VxF-mh-CWm" secondAttribute="leading" id="ldF-cV-1hl"/>
+                            <constraint firstItem="chZ-hI-ZQd" firstAttribute="top" secondItem="4ZH-Ql-PeE" secondAttribute="bottom" id="vBJ-Pt-2g0"/>
                             <constraint firstItem="4ZH-Ql-PeE" firstAttribute="leading" secondItem="VxF-mh-CWm" secondAttribute="leading" id="vWy-Qz-WX0"/>
                         </constraints>
                     </view>
                     <tabBarItem key="tabBarItem" title="Schedule" image="ScheduleIcon" id="u9x-IE-y4w"/>
                     <connections>
                         <outlet property="controlBar" destination="4ZH-Ql-PeE" id="Dg5-vE-3oi"/>
+                        <outlet property="tableView" destination="chZ-hI-ZQd" id="cnv-F7-sNG"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="GuE-jz-3XK" userLabel="First Responder" sceneMemberID="firstResponder"/>
